Bug 42812 - --enable-build-with-cxx bootstrap fails on fortran/resolve.c:gfc_resolve
Summary: --enable-build-with-cxx bootstrap fails on fortran/resolve.c:gfc_resolve
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2010-01-20 06:51 UTC by Jorn Wolfgang Rennecke
Modified: 2010-01-20 08:20 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-01-20 06:51:44 UTC
I see this error during bootstrap:

/user/inria/fsf/bld-gcc-cxx8/./prev-gcc/g++ -B/user/inria/fsf/bld-gcc-cxx8/./prev-gcc/ -B/user/inria/cxx/i686-pc-linux-gnu/bin/ -nostdinc++ -I/user/inria/fsf/bld-gcc-cxx8/prev-i686-pc-linux-gnu/libstdc++-v3/include/i686-pc-linux-gnu -I/user/inria/fsf/bld-gcc-cxx8/prev-i686-pc-linux-gnu/libstdc++-v3/include -I/user/inria/fsf/gcc/libstdc++-v3/libsupc++ -L/user/inria/fsf/bld-gcc-cxx8/prev-i686-pc-linux-gnu/libstdc++-v3/src/.libs -c  -g -O2 -fomit-frame-pointer -gtoggle -DIN_GCC   -W -Wall -Wwrite-strings -Wcast-qual -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror -fno-common  -DHAVE_CONFIG_H -I. -Ifortran -I../../gcc/gcc -I../../gcc/gcc/fortran -I../../gcc/gcc/../include -I../../gcc/gcc/../libcpp/include  -I../../gcc/gcc/../libdecnumber -I../../gcc/gcc/../libdecnumber/bid -I../libdecnumber  -DCLOOG_PPL_BACKEND  -I/usr/include/libelf  ../../gcc/gcc/fortran/resolve.c -o fortran/resolve.o
cc1plus: warnings being treated as errors
../../gcc/gcc/fortran/resolve.c: In function ‘void gfc_resolve(gfc_namespace*)’:
../../gcc/gcc/fortran/resolve.c:12359:19: error: large integer implicitly truncated to unsigned type

The value -1 is assigned to the unsigned bitfield "resolve" in a
struct gfc_namespace.
Comment 1 Jorn Wolfgang Rennecke 2010-01-20 07:49:04 UTC
Actually, I see now that the patch for PR40011 was all right at the time,
it was the patch for PR39626 which introduced PR42812.
Comment 2 Jorn Wolfgang Rennecke 2010-01-20 07:52:37 UTC
Subject: Bug 42812

Author: amylaar
Date: Wed Jan 20 07:52:18 2010
New Revision: 156062

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=156062
Log:
	PR bootstrap/42812
	* gfortran.h  (struct gfc_namespace) <resolved>: Change to signed
	bitfield of width 2.

Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/gfortran.h