	PR bootstrap/42812 	* gfortran.h  (struct gfc_namespace) <resolved>: Change to signed 	bitfield of width 2.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156062 138bc75d-0d04-0410-961f-82ee72b054a4